--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -3,6 +3,13 @@
     <div class="col-sm-12">
       <h1><%= @items.count %> Items</h1>
     </div>
+
+    <%= form_tag({:controller => "searches", :action=>"index"}, method: :get) do %>
+
+      Search For A Product: <%= text_field_tag :search_params %>
+      <%= submit_tag "Search", search_params: nil  %>
+    <% end %>
+    
   </div>
   <div class="row"></div>
   <% @items.each do |item| %>
@@ -15,4 +22,3 @@
     </div>
   <% end %>
 </div>
-
