Ajax search function working

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,21 @@
  *= require_self
  *= require twitter/bootstrap
  */
+
+ .search-table {
+   max-width: 800px;
+ }
+
+.search-img {
+  max-width: 200px;
+}
+
+form.add-item-form {
+    width: 800px;
+    margin: 0 auto;
+    border: 1px solid #aaa;
+    padding: 30px;
+    float: left;
+    margin-right: 25px;
+    margin-bottom: 20px;
+}
