--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,10 @@
  *= require_self
  *= require twitter/bootstrap
  */
+ body {
+   padding: 20px;
+   background-color: #ff6000!important;
+ }
 
  .search-table {
    max-width: 800px;
@@ -21,12 +25,7 @@
   max-width: 200px;
 }
 
-form.add-item-form {
-    width: 800px;
-    margin: 0 auto;
-    border: 1px solid #aaa;
-    padding: 30px;
-    float: left;
-    margin-right: 25px;
-    margin-bottom: 20px;
+.table-bordered {
+  background-color: #f4f4f4;
+  margin-top: 30px;
 }
